--- a/.env.example
+++ b/.env.example
@@ -4,26 +4,17 @@ DB_USER="root"
 DB_PASS="123456"
 DB_DATABASE="fire_crm_dev"
 
-#VICIDIAL_DB_HOST="10.10.30.16"
-VICIDIAL_DB_HOST="192.168.31.96"
+VICIDIAL_DB_HOST="127.0.0.1"
 VICIDIAL_DB_PORT=3306
-VICIDIAL_DB_USER="crm_user"
-VICIDIAL_DB_PASS="F0qW523SPx8f"
+VICIDIAL_DB_USER="discador_user"
+VICIDIAL_DB_PASS="p3ykQbZKGteT4Jcf"
 VICIDIAL_DB_DATABASE="asterisk"
 
-#VICIDIAL2_DB_HOST="10.10.30.14"
-VICIDIAL2_DB_HOST="192.168.31.96"
+VICIDIAL2_DB_HOST="127.0.0.1"
 VICIDIAL2_DB_PORT=3306
-VICIDIAL2_DB_USER="remoto2"
-VICIDIAL2_DB_PASS="l!WiZ~qQ8@s0"
+VICIDIAL2_DB_USER="discador_user"
+VICIDIAL2_DB_PASS="p3ykQbZKGteT4Jcf"
 VICIDIAL2_DB_DATABASE="asterisk"
-
-#VICIDIAL_DB_HOST="127.0.0.1"
-#VICIDIAL_DB_PORT=3306
-#VICIDIAL_DB_USER="root"
-#VICIDIAL_DB_PASS="123456"
-#VICIDIAL_DB_DATABASE="asterisk"
-
 
 DISCADOR_API_URL="http://127.0.0.1:9205/api/"
 API_URL="http://127.0.0.1:9205/api/"
